--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,7 +30,9 @@ dependencies:
   firebase_auth: ^1.2.0
   firebase_core: ^1.2.0
   flutter_bloc: ^7.0.0
+  flutter_facebook_auth: ^3.4.0
   flutter_native_splash: ^1.1.8+4
+  get_storage: ^2.0.2
   google_sign_in: ^5.0.4
   provider: ^5.0.0
 
