--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,7 @@ dependencies:
   equatable: ^2.0.2
   firebase_auth: ^1.2.0
   firebase_core: ^1.2.0
+  fl_chart: ^0.36.1
   flutter_bloc: ^7.0.0
   flutter_facebook_auth: ^3.4.0
   flutter_native_splash: ^1.1.8+4
